--- a/relinksys/api/views/optometric.ejs
+++ b/relinksys/api/views/optometric.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +14,7 @@
     margin: 0;
   }
     html body {
-        zoom:90%;
+        zoom:85%;
         font-family: Helvetica;
         padding: 3%;
     }
@@ -106,7 +107,7 @@
                 
                 <tr style="background-color: #000; color: #fff; position: relative;">
                     <th style="background-color: #000; color: #fff; width:15%;">
-                    <b style="position: absolute; top:31.8%; left: 0%; right: 85.8%; z-index: 1;"> <img src="http://localhost:3000/assest/o-rx1.jpeg" alt="" width="50%" ></b>     
+                    <b style="position: absolute; top:30.8%; left: 0%; right: 85.8%; z-index: 1;"> <img src="http://localhost:3000/assest/o-rx1.jpeg" alt="" width="50%" ></b>     
                     </th>
                     <th style="text-align: center !important;">Sph</th>
                     <th style="text-align: center !important;">Cyl </th>
@@ -229,7 +230,7 @@
             </tr>
             <tr >
                 <th style="padding: 5% 0;">Advance </th>
-                <th style="padding: 5% 0;">: <%= data.recivePayment.toFixed(2) %>00
+                <th style="padding: 5% 0;">: <%= data.recivePayment.toFixed(2) %>
                 </th>
             </tr>
             <tr>
@@ -250,3 +251,5 @@
 </body>
 
 </html>
+
+  
