--- a/relinksys/web/src/app/sale/billing/billing.component.html
+++ b/relinksys/web/src/app/sale/billing/billing.component.html
@@ -2231,7 +2231,10 @@
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
-                <button  class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
+                <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
+            </div>
+             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
+              <button type="button" class="me-3" mat-raised-button color="primary"  (click)="CreditManualPDF()">PDF</button> 
             </div>
            </div>
         </form>
@@ -3089,7 +3092,10 @@
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
-                <button  class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
+                <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
+            </div>
+             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
+                <button type="button" class="me-3" mat-raised-button color="primary" (click)="CreditManualPDF()">PDF</button> 
             </div>
            </div>
         </form>
@@ -3654,7 +3660,10 @@
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
-                <button  class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
+                <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
+                <button  type="button" class="me-3" mat-raised-button color="primary" (click)="CreditManualPDF()">PDF</button> 
             </div>
            </div>
         </form>
