--- a/relinksys/web/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
+++ b/relinksys/web/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
@@ -228,8 +228,16 @@
                                                     <td>{{data.Barcode}}</td>
                                                     <td>{{data.TransferCount}}</td>
                                                     <td>{{data.TransferStatus}}</td>
-                                                     <td *ngIf="data.ID != null">{{data.FromShop}}<span [style.color]="'blue'" *ngIf="data.FromAreaName !== null "> ({{data.FromAreaName}})</span></td>
-                                                    <td *ngIf="data.ID != null">{{data.ToShop}}<span [style.color]="'blue'" *ngIf="data.ToAreaName !== null "> ({{data.ToAreaName}})</span></td>
+                                                     <td *ngIf="data.ID != null">{{data.FromShop}}
+                                                        <ng-container *ngIf="data.FromAreaName && data.FromAreaName !== 'null' && data.FromAreaName !== ''">
+                                                            (<span style="color: blue;">{{ data.FromAreaName }}</span>)
+                                                        </ng-container>
+                                                    </td>
+                                                    <td *ngIf="data.ID != null">{{data.ToShop}}
+                                                        <ng-container *ngIf="data.ToAreaName && data.ToAreaName !== 'null' && data.ToAreaName !== ''">
+                                                             (<span style="color: blue;">{{ data.ToAreaName }}</span>)
+                                                        </ng-container>
+                                                    </td>
                                                     <td *ngIf="data.ID == null">{{data.FromShop}}</td>
                                                     <td *ngIf="data.ID == null">{{data.ToShop}}</td>
                                                     <td>{{data.Remark}}</td>
