--- a/relinksys/web/src/app/company-payment/expense/expense.component.html
+++ b/relinksys/web/src/app/company-payment/expense/expense.component.html
@@ -10,8 +10,8 @@
                                 <h2>Expenses List </h2>
                             </div>
                             <div class="ps-md-0 ps-0 pt-1" style="width: 40px;">
-                                <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
-                                    (click)="exportAsXLSX()"></i>
+                                <!-- <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                                    (click)="exportAsXLSX()"></i> -->
                             </div>
                             <div class="col-md-2 col-4 ps-md-0 ps-1">
                                 <select class=" form-control"
