--- a/relinksys/web/src/app/sale/customer-list/customer-list.component.html
+++ b/relinksys/web/src/app/sale/customer-list/customer-list.component.html
@@ -7,8 +7,10 @@
             <div class="header p-2 py-0 pt-1">
               <div class="row">
                 <div class="col-xl-1 col-lg-2 col-md-2 col-9 p-0 ps-3">
-                  <h2>Customer <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
-                      (click)="exportAsXLSX()"></i></h2>
+                  <h2>Customer 
+                    <!-- <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                      (click)="exportAsXLSX()"></i> -->
+                    </h2>
                 </div>
 
                 <div class="col-md-2 col-4 mt-2 mt-md-0 ps-md-0 ps-1 order-3 order-md-1">
