--- a/relinksys/api/views/optometristPDF.ejs
+++ b/relinksys/api/views/optometristPDF.ejs
@@ -867,12 +867,12 @@
                                         <div style="margin-top: 0px;">
                                             <div style="position: relative; display: inline-block;">
                                                 <!-- Bottom image (static background) -->
-                                                 <% if (ComP.SlitLamp.drawingImg.trim() =='' ) { %>
+                                                 <% if (ComP.SlitLamp.drawingImg =='' ) { %>
                                                 <img src="http://localhost:3000/assest/opto-img.jpeg"
                                                     alt="Static Slit Lamp"
                                                     style="width: 300px; height: 225px; display: block; margin-top: 10px; ">
  <% } %>
-                                                 <% if (ComP.SlitLamp.drawingImg && ComP.SlitLamp.drawingImg.trim() !=='' ) { %>
+                                                 <% if (ComP.SlitLamp.drawingImg && ComP.SlitLamp.drawingImg !=='' ) { %>
                                                 <img src="http://localhost:3000/assest/opto-img.jpeg"
                                                     alt="Static Slit Lamp"
                                                     style="width: 300px; height: 225px; display: block; margin-top: -9px; ">
