--- a/relinksys/api/views/invoice_Box.ejs
+++ b/relinksys/api/views/invoice_Box.ejs
@@ -194,7 +194,7 @@
                                     data.CustomerLineSpace %>;">
                                     <li>
                                          <% if (data.billMaster.BillDate != "Invalid date"){%>
-                                            <%=data.billMaster.BillDate%>
+                                            <%=data.billDatePrint%>
                                         <%}%>
                                         <% if (data.billMaster.BillDate == "Invalid date"){%>
                                             <%=data.billMaster.OrderDate%>
