--- a/relinksys/api/views/ladger.ejs
+++ b/relinksys/api/views/ladger.ejs
@@ -94,6 +94,18 @@
                     <%=data.BalanceDue.toFixed(2)%>
                 </td>
             </tr>
+            <tr>
+                <td style="border-top: 1px Solid #b2b2b2 !important;"> Customer Credit </td>
+                <td style="text-align: right;border-top: 1px Solid #b2b2b2 !important;">
+                    <%=data.AvlCustomerCreditBalance.toFixed(2)%>
+                </td>
+            </tr>
+            <tr>
+                <td style="border-top: 1px Solid #b2b2b2 !important;"> Manual Credit </td>
+                <td style="text-align: right;border-top: 1px Solid #b2b2b2 !important;">
+                    <%=data.AvlManualCustomerCreditBalance.toFixed(2)%>
+                </td>
+            </tr>
         </table>
     </section>
 
