--- a/relinksys/api/views/memberShipCard.ejs
+++ b/relinksys/api/views/memberShipCard.ejs
@@ -1,4 +1,5 @@
-<html>
+  <% if (data.Mode != 'CustomerCard'){%>
+<!-- <html>
 <link rel="stylesheet" href="http://localhost:3000/assest/customerPower.css">
 
 <head>
@@ -58,4 +59,55 @@
 
 </body>
 
+</html> -->
+   <%}%>
+     <% if (data.Mode == 'CustomerCard'){%>
+ <html>
+
+
+<head>
+   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
+      html body {
+         zoom: 100%;
+        padding: 0;
+        margin: 0;
+        
+      }
+
+   </style>
+</head>
+
+
+<body style="width: 3.14in; height: 1.75in; background: url(https://img.freepik.com/free-vector/neon-light-background_53876-67235.jpg); color: rgb(240, 248, 255); padding: 2% 3%;  background-size: 100% 100%;     box-shadow: inset 1px 1px 20px 2px rgb(6, 6, 6);">
+
+  <div class=" card" >
+    <h1 style="padding: 0; margin: 0; font-weight: 900; text-shadow: 2px 3px 2px rgb(0, 0, 0);">CUSTOMER CARD</h1>
+    <P style="padding: 0; margin: 0;font-weight: 500; 
+    text-align: center; letter-spacing: 1px; color: rgb(214, 214, 214); text-shadow: 2px 2px 2px rgb(26, 26, 26);
+    font-family: 'Delius', cursive;
+    ">Authorized</P>
+
+    <table style="padding: 0; margin: 0; text-align: left !important; padding-top: 3%; width: 100%;">
+       <tr>
+          <td style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">  <%= data.CustomerName %>  </td>
+       </tr>
+       <tr>
+          <td style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"> <%= data.Mobile %></td>
+       </tr>
+       <tr style="background-color: rgb(255, 255, 255); color:rgb(0, 0, 0); text-align: center; font-size: 18px; font-weight: 600;">
+         <td style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;  box-shadow: inset 1px 1px 15px 1px rgb(113, 113, 113);" colspan="2"> **** **** 1234</td>
+       </tr>
+       <tr>
+          <td style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">* <%= data.SupplierName %> *</td>
+       </tr>
+    </table>
+  </div>
+
+
+
+</body>
+
 </html>
+
+   <%}%>
