--- a/relinksys/api/views/memberShipCard.ejs
+++ b/relinksys/api/views/memberShipCard.ejs
@@ -1,5 +1,5 @@
-  <% if (data.Mode != 'CustomerCard'){%>
-<!-- <html>
+<% if (data.Mode != 'CustomerCard' ){%>
+  <html>
 <link rel="stylesheet" href="http://localhost:3000/assest/customerPower.css">
 
 <head>
@@ -59,55 +59,180 @@
 
 </body>
 
-</html> -->
-   <%}%>
-     <% if (data.Mode == 'CustomerCard'){%>
- <html>
-
-
-<head>
-   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
-      html body {
-         zoom: 100%;
-        padding: 0;
-        margin: 0;
-        
-      }
-
-   </style>
-</head>
-
-
-<body style="width: 3.14in; height: 1.75in; background: url(https://img.freepik.com/free-vector/neon-light-background_53876-67235.jpg); color: rgb(240, 248, 255); padding: 2% 3%;  background-size: 100% 100%;     box-shadow: inset 1px 1px 20px 2px rgb(6, 6, 6);">
-
-  <div class=" card" >
-    <h1 style="padding: 0; margin: 0; font-weight: 900; text-shadow: 2px 3px 2px rgb(0, 0, 0);">CUSTOMER CARD</h1>
-    <P style="padding: 0; margin: 0;font-weight: 500; 
-    text-align: center; letter-spacing: 1px; color: rgb(214, 214, 214); text-shadow: 2px 2px 2px rgb(26, 26, 26);
-    font-family: 'Delius', cursive;
-    ">Authorized</P>
-
-    <table style="padding: 0; margin: 0; text-align: left !important; padding-top: 3%; width: 100%;">
-       <tr>
-          <td style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">  <%= data.CustomerName %>  </td>
-       </tr>
-       <tr>
-          <td style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"> <%= data.Mobile %></td>
-       </tr>
-       <tr style="background-color: rgb(255, 255, 255); color:rgb(0, 0, 0); text-align: center; font-size: 18px; font-weight: 600;">
-         <td style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;  box-shadow: inset 1px 1px 15px 1px rgb(113, 113, 113);" colspan="2"> **** **** 1234</td>
-       </tr>
-       <tr>
-          <td style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">* <%= data.SupplierName %> *</td>
-       </tr>
-    </table>
-  </div>
-
-
-
-</body>
-
 </html>
+  <%}%>
+    <% if (data.Mode=='CustomerCard' ){%>
+      <html>
+      <head>
+        <style>
+          @import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
 
-   <%}%>
+          html body {
+            zoom: 100%;
+            padding: 0;
+            margin: 0;
+          }
+
+          /* Prescription Section */
+          .pres-table {
+            width: 97%;
+            border-collapse: collapse;
+            font-size: 8px;
+            color: #000000;
+            padding-top: 0px;
+          }
+
+          .pres-table tr td {
+            border: 1px solid #686868;
+            text-align: center;
+            letter-spacing: 1px;
+          }
+
+          .pres-title {
+            text-align: center;
+            padding-top: 0;
+            letter-spacing: 1px;
+            font-size: 12px;
+            border: none !important;
+            color: #002E90;
+          }
+        </style>
+      </head>
+
+      <body>
+        <div style="width: 3.14in; height: 1.83in; background: url('http://localhost:3000/assest/auth.png');
+             padding: 1%; background-size: 100% 100%; "> 
+        </div>
+
+        <div class="card"
+          style="text-align:center; color:white;width: 3.14in; height: 1.77in;  background:  linear-gradient(240deg, #ffffff 5%, #ffffff 10%, #ffffff 90%, #ffffff 100%);; background-size: 100% 100%; font-family: Arial, Helvetica, sans-serif; color: #002E90; padding: 1% ; ">
+
+          <table style="width:100%;  text-align:left;  padding: 0; margin: 0; ">
+            <tr>
+              <td style="width: 100%;">
+                <h6
+                  style="margin:0; font-weight:500; text-shadow:2px 3px 2px rgba(0, 0, 0, 0.429); letter-spacing: 1.5px;text-transform: uppercase; border-bottom: 1px solid #002E90; font-size: 10px; color: 002E90;">
+                  Thank you for choosing Genuine Card
+                </h6>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2"
+                style=" letter-spacing: 1px; text-transform: uppercase; padding-top: 1px; font-size: 10px; ">
+                <%= data.CustomerName %>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2" style="  letter-spacing: 1px; font-size: 10px; padding: 0; margin: 0;">
+                <% if (data.Mobile !='' && data.Mobile !="undefined" ){%>
+                  <%= data.Mobile %>
+                    <%}%>
+                      <% if (data.Mobile == '' || data.Mobile=="undefined" ){%>
+                        -
+                        <%}%>
+              </td>
+            </tr>
+          </table>
+
+          <table class="pres-table"
+            style="padding: 0; margin: 0;   margin-left: 3px !important; margin-bottom: 0px !important;">
+            <tr>
+              <td colspan="7" class="pres-title" style="padding: 0; margin: 0;">Prescription Details</td>
+            </tr>
+            <tr style="background-color: #e5e5e5;">
+              <td>EYE</td>
+              <td>SPH</td>
+              <td>CYL</td>
+              <td>AXIS</td>
+              <td>VA</td>
+              <td>ADD</td>
+              <td>PD</td>
+            </tr>
+            <tr>
+              <td style="background-color: #e5e5e5;">RIGHT</td>
+              <td>
+                <%= data.Measurement.SPH_R %>
+              </td>
+              <td>
+                <%= data.Measurement.CYL_R %>
+              </td>
+              <td>
+                <%= data.Measurement.Axis_R %>
+              </td>
+              <td>
+                <%= data.Measurement.VA_R %>
+              </td>
+              <td>
+                <%= data.Measurement.Add_R %>
+              </td>
+              <td>
+                <%= data.Measurement.PD_R %>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="background-color: #e5e5e5;">LEFT</td>
+              <td>
+                <%= data.Measurement.SPH_L %>
+              </td>
+              <td>
+                <%= data.Measurement.CYL_L %>
+              </td>
+              <td>
+                <%= data.Measurement.Axis_L %>
+              </td>
+              <td>
+                <%= data.Measurement.VA_L %>
+              </td>
+              <td>
+                <%= data.Measurement.Add_L %>
+              </td>
+              <td>
+                <%= data.Measurement.PD_L %>
+              </td>
+            </tr>
+             <tr>
+              <td colspan="7" class="pres-title" style="font-size: 10px !important; margin: 0 !important; padding: 0 !important;"><%= data.Lens %>
+                     <% if (data.Lens !='' && data.Lens !="undefined" ){%>
+                  <%= data.Lens %>
+                    <%}%>
+                      <% if (data.Lens == '' || data.Lens=="undefined" ){%>
+                        -
+                        <%}%>
+              </td>
+            </tr>
+          </table>
+
+          <table style="width:100%;   padding-right: 3px;  ">
+            
+            <tr
+              style=" background: linear-gradient(360deg, #002E90 50%, #e40000 50%); color:rgb(255, 255, 255); text-align:center; font-size:15px; font-weight:600;">
+              <td colspan="2"
+                style="  box-shadow: inset 1px 1px 15px 1px rgba(113, 113, 113, 0.669); letter-spacing: 1px; padding: 1% 0; ">
+                **** **** <%= data.CardNumber %>
+              </td>
+            </tr>
+
+            <tr>
+              <td colspan="2"
+                style="  letter-spacing: 1px; padding-bottom: 2px;text-transform: uppercase; padding-top: 2px; font-size: 8px;">
+                * <%= data.SupplierName %> *
+              </td>
+            </tr>
+
+            <tr style="padding-top: 0px;">
+              <td style="  border-top: 1px solid #002E90; font-size: 8px;  width: 80%; letter-spacing: 1px;">
+                Check your authenticity on <b style="color: #002E90; font-weight: 300;"> www.cannonoptic.com</b>
+              </td>
+              <td
+                style="  border-top: 1px solid #002E90; font-size: 8px; padding-top: 3px;width: 5%; text-align: right;">
+                <img src="http://localhost:3000/assest/UK_flag.png" alt="uk" width="100%">
+              </td>
+            </tr>
+
+          </table>
+        </div>
+      </body>
+    </html>
+
+  <%}%>
