--- a/relinksys/api/views/lenscut.ejs
+++ b/relinksys/api/views/lenscut.ejs
@@ -167,6 +167,12 @@
                                     <%= data.shopdetails.Address %>
                                 </td>
                             </tr>
+                            <tr>
+                                
+                                <td style=" padding: 0 !important; line-height: 25px;">
+                                    <%= data.shopdetails.MobileNo1 %> ,   <%= data.shopdetails.MobileNo2 %>
+                                </td>
+                            </tr>
                         </thead>
                     </table>
                 </td>
