--- a/relinksys/web/src/app/admin/company-setting/company-setting.component.html
+++ b/relinksys/web/src/app/admin/company-setting/company-setting.component.html
@@ -360,6 +360,11 @@
                                                             [(ngModel)]="data.IsIpCheck" class="example-margin">Ip Check
                                                         </mat-slide-toggle>
                                                     </div>
+                                                    <div class="col-xl-1 col-lg-1" >
+                                                        <mat-slide-toggle name="IsDeleteBill " color="primary" #Multiplecontrol
+                                                            [(ngModel)]="data.IsDeleteBill " class="example-margin">Delete Bill 
+                                                        </mat-slide-toggle>
+                                                    </div>
                                                     <div class="col-md-3 ">
                                                         <button mat-raised-button color="primary"
                                                             [disabled]="!settingForm.valid"
