--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -134,6 +134,10 @@
                         <tr *ngFor="let Bdata of dataList ; let i = index;"
                           [ngStyle]="{whiteSpace: 'nowrap', overflowX: 'auto'}">
                           <td>
+                             <button *ngIf="user.is_direct == true" class="bg-btn" (click)="deleteBillPermanent(i)">
+                              <mat-icon class="delete_icon me-1">delete_forever</mat-icon>
+                            </button>
+
                             <button title="Messenger" class="bg-btn msg">
                               <i class="fab fa-facebook-messenger"></i>
                             </button>
