--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -134,7 +134,7 @@
                         <tr *ngFor="let Bdata of dataList ; let i = index;"
                           [ngStyle]="{whiteSpace: 'nowrap', overflowX: 'auto'}">
                           <td>
-                             <button *ngIf="user.is_direct == true" class="bg-btn" (click)="deleteBillPermanent(i)">
+                            <button *ngIf="user.is_direct == true" class="bg-btn" (click)="deleteBillPermanent(i)">
                               <mat-icon class="delete_icon me-1">delete_forever</mat-icon>
                             </button>
 
@@ -319,7 +319,7 @@
                           <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">
                             {{Bdata.ShopName}}
                             <ng-container *ngIf="Bdata.AreaName && Bdata.AreaName !== 'null' && Bdata.AreaName !== ''">
-                               (<span style="color: blue;">{{ Bdata.AreaName }}</span>)
+                              (<span style="color: blue;">{{ Bdata.AreaName }}</span>)
                             </ng-container>
                           </td>
                           <td [ngClass]="{'deleteClass': Bdata.Status === 0}" class="text-center ">{{Bdata.Sno}}</td>
@@ -522,9 +522,9 @@
                           <mat-label>Payment Mode</mat-label>
                           <mat-select name="Payment Mode" [(ngModel)]="applyCreditPayment.PaymentMode" required
                             #PaymentModepecontrol1>
-                              <mat-option *ngFor="let p of PaymentModesList; let i = index" [value]="p.Name">
-                                   {{ p.Name }}
-                             </mat-option>
+                            <mat-option *ngFor="let p of PaymentModesList; let i = index" [value]="p.Name">
+                              {{ p.Name }}
+                            </mat-option>
                           </mat-select>
                         </mat-form-field>
                       </div>
@@ -548,15 +548,21 @@
             <!-- payment -->
             <ng-template #content1 role="document" let-modal>
               <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
-                  <div class="row" style="width:100%">
-            <div class="col-4">
-                <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Payment</h3>
-            </div>
-            <div class="col-md-3 col-6 ms-auto text-right" *ngIf="this.totalManualcreditAmt != 0">
-                <h3 class="modal-title header pt-2 pe-2" id="exampleModalLabel" style="font-weight: bolder;text-align:right">Manual Credit Amount: {{this.totalManualcreditAmt}}</h3>
-            </div>
-          
-        </div>
+                <div class="row" style="width:100%">
+                  <div class="col-4">
+                    <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Payment
+                      <button type="button" (click)="opneModelI(content2i)" mat-raised-button color="primary">
+                        insurance
+                      </button>
+                    </h3>
+                  </div>
+                  <div class="col-md-3 col-6 ms-auto text-right" *ngIf="this.totalManualcreditAmt != 0">
+                    <h3 class="modal-title header pt-2 pe-2" id="exampleModalLabel"
+                      style="font-weight: bolder;text-align:right">Manual Credit Amount: {{this.totalManualcreditAmt}}
+                    </h3>
+                  </div>
+
+                </div>
                 <button type="button" class="btn-close" aria-hidden="false"
                   (click)="modal.dismiss('Cross click')"></button>
               </div>
@@ -657,8 +663,8 @@
                         mat-raised-button color="primary">Apply Payment</button>
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-4 col-8 ps-md-4 ps-md-0">
-                      <button type="button" [disabled]="applyPayment.CustomerCredit === 0" type="button" mat-raised-button
-                        color="primary">
+                      <button type="button" [disabled]="applyPayment.CustomerCredit === 0" type="button"
+                        mat-raised-button color="primary">
                         Credit Note
                       </button>
                       <button class="whatsapp ms-4 me-4"><i class="fa-brands fa-whatsapp"></i></button>
@@ -746,7 +752,8 @@
                             </mat-form-field>
                           </div>
                           <div class="col-xl-3 col-lg-4 col-md-6 col-4 ">
-                            <button type="button" [disabled]="f7.invalid || otpChecked === true || applyReward.PaidAmount === 0"
+                            <button type="button"
+                              [disabled]="f7.invalid || otpChecked === true || applyReward.PaidAmount === 0"
                               mat-raised-button color="primary" (click)="sendOtpForAppliedReward()">Send Otp</button>
                           </div>
                         </div>
@@ -819,6 +826,183 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </ng-template>
+
+
+            <ng-template #content2i role="document" let-modal>
+              <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+                <div class="row" style="width:100%">
+                  <div class="col-4">
+                    <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">insurance
+                    </h3>
+                  </div>
+                </div>
+                <button type="button" class="btn-close" aria-hidden="false"
+                  (click)="modal.dismiss('Cross click')"></button>
+              </div>
+              <div class="modal-body">
+                <form #fi="ngForm" (ngSubmit)="saveInsuranceQuotation()">
+                  <div class="row">
+
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Insurance Company Name</mat-label>
+                        <mat-select name="InsuranceCompanyName" [(ngModel)]="Insurance.InsuranceCompanyName" required [disabled]="this.approved == true"
+                          #GSTTypecontrol1>
+                          <mat-option [value]="p.Name" *ngFor="let p of InsuranceCompanyNameList"> {{p.Name}}
+                          </mat-option>
+                        </mat-select>
+                      </mat-form-field>
+
+                    </div>
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                        <mat-label>PolicyNumber</mat-label>
+                        <input type="text" matInput name="PolicyNumber" [(ngModel)]="Insurance.PolicyNumber" required [disabled]="this.approved == true"
+                          [autocomplete]="false">
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                        <mat-label>ClaimAmount</mat-label>
+                        <input type="number" matInput name="ClaimAmount" [(ngModel)]="Insurance.ClaimAmount" required [disabled]="this.approved == true"
+                          [autocomplete]="false">
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Remark</mat-label>
+                        <input type="text" matInput name="Remark" [(ngModel)]="Insurance.Remark" [autocomplete]="false" [disabled]="this.approved == true">
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Other</mat-label>
+                        <input type="text" matInput name="Other" [(ngModel)]="Insurance.Other" [autocomplete]="false" [disabled]="this.approved == true">
+                      </mat-form-field>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" *ngIf="this.approved == true ">
+                      <mat-form-field class="example-full-width mb-0">
+                        <mat-label>ApprovedAmount</mat-label>
+                        <input type="number" matInput name="ApprovedAmount" [(ngModel)]="Insurance.ApprovedAmount"
+                          [autocomplete]="false">
+                      </mat-form-field>
+                    </div>
+                    <!-- <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                            <mat-form-field class="example-full-width mb-0">
+                              <mat-label>PaidAmount</mat-label>
+                              <input type="text" matInput name="PaidAmount" [(ngModel)]="Insurance.PaidAmount"
+                                [autocomplete]="false" >
+                            </mat-form-field>
+                          </div>
+                       <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                            <mat-form-field class="example-full-width mb-0">
+                              <mat-label>RemainingAmount</mat-label>
+                              <input type="text" matInput name="RemainingAmount" [(ngModel)]="Insurance.RemainingAmount"
+                                [autocomplete]="false" >
+                            </mat-form-field>
+                          </div> -->
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" *ngIf="this.approved == true">
+                      <mat-form-field class="example-full-width mb-0">
+                        <mat-label>PaymentStatus</mat-label>
+                        <mat-select name="PaymentStatus" [(ngModel)]="Insurance.PaymentStatus" required
+                          #GSTTypecontrol1>
+                          <mat-option value="Approved"> Approved </mat-option>
+                          <mat-option value="Pending"> Pending </mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-3">
+                      <button *ngIf="this.approved == true" class="me-3" type="button" mat-raised-button color="primary"
+                        [disabled]="!fi.valid" (click)="updateInsuranceQuotation()">Update</button>
+                      <button *ngIf="this.InsuranceList.length == 0" type="submit" class="me-3" mat-raised-button
+                        color="primary" [disabled]="!fi.valid">Save</button>
+                    </div>
+                  </div>
+
+                  <div class="row" *ngIf="Insurance.PaymentStatus == 'Approved'">
+                      <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                           <mat-form-field class="example-full-width mb-0">
+                              <mat-label>BillDueAmount</mat-label>
+                              <input type="text" matInput name="BillDueAmount" [(ngModel)]="Insurance.BillDueAmount" disabled
+                                [autocomplete]="false" >
+                            </mat-form-field>
+                      </div>
+
+                      <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                           <mat-form-field class="example-full-width mb-0">
+                              <mat-label>ApprovedAmount</mat-label>
+                              <input type="text" matInput name="ApprovedAmount" [(ngModel)]="Insurance.ApprovedAmount" disabled
+                                [autocomplete]="false" >
+                            </mat-form-field>
+                      </div>
+                        <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                           <mat-form-field class="example-full-width mb-0">
+                              <mat-label>PaidAmount</mat-label>
+                              <input type="text" matInput name="PaidAmount" [(ngModel)]="Insurance.PaidAmount"
+                                [autocomplete]="false" >
+                            </mat-form-field>
+                      </div>
+
+                        <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                      <button *ngIf="this.approved == true" class="me-3" type="button" mat-raised-button color="primary"
+                        (click)="applyInsuranceQuotation()">Apply</button>
+                     
+                    </div>
+
+                  </div>
+                  
+                  <div class="row">
+                    <div class=" col-12 mt-5 mt-md-0 ms-auto">
+                      <div class="table-responsive "
+                        style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
+                        <table class="table table-striped table-hover table-sm table-bordered"
+                          style="border: 2px solid #fff !important; margin: 0; ">
+                          <thead>
+                            <tr>
+                              <th>Action</th>
+                              <th>CustomerName</th>
+                              <th>BillNumber</th>
+                              <th>CompanyName</th>
+                              <th>PolicyNumber</th>
+                              <th>Remark</th>
+                              <th>Other</th>
+                              <th>ClaimAmount</th>
+                              <th>ApprovedAmount</th>
+                              <th>PaymentStatus</th>
+                              <!--  <th>RemainingAmount</th> -->
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr style="white-space:nowrap;" class="text-center"
+                              *ngFor="let data of InsuranceList; let i = index;">
+                              <td class="text-left">
+                                <button type="button" class="bg-btn" (click)="edit(data)">
+                                  <mat-icon class="edit_icon ms-1">edit </mat-icon>
+                                </button>
+                              </td>
+                              <td class="text-left">{{data.CustomerName}}</td>
+                              <td class="text-left">{{data.BillNumber}}</td>
+                              <td class="text-left">{{data.InsuranceCompanyName}}</td>
+                              <td class="text-left">{{data.PolicyNumber}}</td>
+                              <td class="text-left">{{data.Remark}} </td>
+                              <td class="text-left">{{data.Other}} </td>
+                              <td class="text-left">{{data.ClaimAmount}} </td>
+                              <td class="text-left">{{data.ApprovedAmount}} </td>
+                              <td class="text-left">{{data.PaymentStatus}} </td>
+                            </tr>
+
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+
+                </form>
+
               </div>
             </ng-template>
           </div>
