--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -870,6 +870,13 @@
                           [autocomplete]="false">
                       </mat-form-field>
                     </div>
+                      <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" >
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>RequestDate</mat-label>
+                        <input matInput name="RequestDate" type="date" [(ngModel)]="Insurance.RequestDate"  required
+                       autocomplete="false">
+                    </mat-form-field>
+                </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
                       <mat-form-field class="example-full-width mb-0">
                         <mat-label>Remark</mat-label>
@@ -915,6 +922,14 @@
                       </mat-form-field>
                     </div>
 
+                      <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" *ngIf="this.approved == true">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>ApproveDate</mat-label>
+                        <input matInput name="ApproveDate" type="date" [(ngModel)]="Insurance.ApproveDate"  required
+                       autocomplete="false">
+                    </mat-form-field>
+                </div>
+
                     <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-3">
                       <button *ngIf="this.approved == true" class="me-3" type="button" mat-raised-button color="primary"
                         [disabled]="!fi.valid" (click)="updateInsuranceQuotation()">Update</button>
@@ -946,6 +961,7 @@
                                 [autocomplete]="false" >
                             </mat-form-field>
                       </div>
+                    
 
                         <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
                       <button *ngIf="this.approved == true" class="me-3" type="button" mat-raised-button color="primary"
