--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -843,6 +843,7 @@
               </div>
               <div class="modal-body">
                 <form #fi="ngForm" (ngSubmit)="saveInsuranceQuotation()">
+                 
                   <div class="row">
 
                     <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
@@ -889,28 +890,17 @@
                         <input type="text" matInput name="Other" [(ngModel)]="Insurance.Other" [autocomplete]="false" [disabled]="this.approved == true">
                       </mat-form-field>
                     </div>
+                    </div>
 
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" *ngIf="this.approved == true ">
+              <div class="row" *ngIf="this.approved == true">
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" *ngIf="this.approved == true">
                       <mat-form-field class="example-full-width mb-0">
                         <mat-label>ApprovedAmount</mat-label>
-                        <input type="number" matInput name="ApprovedAmount" [(ngModel)]="Insurance.ApprovedAmount"
+                        <input type="number" matInput name="ApprovedAmount" [(ngModel)]="Insurance.ApprovedAmount" required
                           [autocomplete]="false">
                       </mat-form-field>
                     </div>
-                    <!-- <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
-                            <mat-form-field class="example-full-width mb-0">
-                              <mat-label>PaidAmount</mat-label>
-                              <input type="text" matInput name="PaidAmount" [(ngModel)]="Insurance.PaidAmount"
-                                [autocomplete]="false" >
-                            </mat-form-field>
-                          </div>
-                       <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
-                            <mat-form-field class="example-full-width mb-0">
-                              <mat-label>RemainingAmount</mat-label>
-                              <input type="text" matInput name="RemainingAmount" [(ngModel)]="Insurance.RemainingAmount"
-                                [autocomplete]="false" >
-                            </mat-form-field>
-                          </div> -->
+                  
                     <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" *ngIf="this.approved == true">
                       <mat-form-field class="example-full-width mb-0">
                         <mat-label>PaymentStatus</mat-label>
@@ -929,14 +919,14 @@
                        autocomplete="false">
                     </mat-form-field>
                 </div>
-
+</div>
                     <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-3">
                       <button *ngIf="this.approved == true" class="me-3" type="button" mat-raised-button color="primary"
                         [disabled]="!fi.valid" (click)="updateInsuranceQuotation()">Update</button>
                       <button *ngIf="this.InsuranceList.length == 0" type="submit" class="me-3" mat-raised-button
                         color="primary" [disabled]="!fi.valid">Save</button>
                     </div>
-                  </div>
+                  
 
                   <div class="row" *ngIf="Insurance.PaymentStatus == 'Approved'">
                       <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
@@ -950,7 +940,7 @@
                       <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
                            <mat-form-field class="example-full-width mb-0">
                               <mat-label>ApprovedAmount</mat-label>
-                              <input type="text" matInput name="ApprovedAmount" [(ngModel)]="Insurance.ApprovedAmount" disabled
+                              <input type="text" matInput name="ApprovedAmount" [(ngModel)]="Insurance.ApprovedAmount" 
                                 [autocomplete]="false" >
                             </mat-form-field>
                       </div>
@@ -963,7 +953,7 @@
                       </div>
                     
 
-                        <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0">
+                        <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" *ngIf="Insurance.PaymentStatus == 'Applied'">
                       <button *ngIf="this.approved == true" class="me-3" type="button" mat-raised-button color="primary"
                         (click)="applyInsuranceQuotation()">Apply</button>
                      
