--- a/relinksys/web/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
+++ b/relinksys/web/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
@@ -184,7 +184,7 @@
                                 </div>
                                 <div class="col-xl-4 col-lg-4 col-md-4 col-12 mb-0">
                                     <button class="me-3" mat-raised-button color="primary"
-                                        [disabled]="xferItem.TransferCount == 0 || xferItem.TransferCount == null" >Intiate Tr<span class="first-letter">a</span>nsfer</button>
+                                        [disabled]="xferItem.TransferCount == 0 || xferItem.TransferCount == null" >Initiate Tr<span class="first-letter">a</span>nsfer</button>
                                        
                                 </div>
                                
