--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -2041,7 +2041,7 @@
               <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
                 <div class="row" style="width:100%">
                   <div class="col-4">
-                    <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">insurance
+                    <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Insurance
                     </h3>
                   </div>
                 </div>
