--- a/relinksys/web/src/app/report/insurance/insurance.component.html
+++ b/relinksys/web/src/app/report/insurance/insurance.component.html
@@ -53,6 +53,18 @@
                                         </mat-form-field>
                                     </div>
                             
+                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                            <mat-form-field class="example-full-width mb-0">
+                                                <mat-label> Company Name</mat-label>
+                                                    <mat-select name="CompanyName" [(ngModel)]="data.CompanyName" 
+                                                        #GSTTypecontrol1>
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option [value]="p.Name" *ngFor="let p of nameList">
+                                                            {{p.Name}} </mat-option>
+                                                    </mat-select>
+                                            </mat-form-field>
+                                    </div>
+
                                     <!--  spec end -->
                                     <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0 ">
                                         <button class="me-3" type="submit" mat-raised-button color="primary">
